<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoftMoneyTraker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Рамин Кадымли</string>
    <string name="user_mail">ramin.qadimli@gts.az</string>
    <string name="title">Title</string>
    <string name="sum">Sum</string>
    <string name="date">Date</string>
    <string name="descriptionTransaction">Транзакция %1$s создана %2$s на сумму %3$d</string>
    <string name="reports">Статистика</string>
    <string name="drawer_item_transaction">Траты</string>
    <string name="drawer_item_category">Категории</string>
    <string name="drawer_item_report">Статистика</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_help">Помощь</string>
    <string name="title_activity_new_transactions">NewTransactionsActivity</string>
    <string name="hint_date">Сегодня</string>
    <string name="title_date">Дата</string>
    <string name="category_hint">Выберите категорию</string>
    <string name="category_text">Категория</string>
    <string name="name_hint">Война и мир</string>
    <string name="name_text">Примечание</string>
    <string name="sum_hint">300</string>
    <string name="sum_text">Сумма</string>
    <string name="new_transaction">Новая трата</string>
    <string name="error_transaction_name">Введите Примечание</string>
    <string name="error_transaction_sum">Введите Сумму</string>
    <string name="login">Login</string>
    <string name="login_error">Error</string>

</resources>
