<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    style="@style/Container.DarkBackground">

    <include layout="@layout/main_toolbar" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:columnCount="2"
        android:paddingBottom="@dimen/small_padding"
        android:paddingLeft="@dimen/medium_padding"
        android:paddingTop="@dimen/small_padding"
        android:rowCount="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_text"
            android:textSize="@dimen/big_text_size" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:hint="@string/name_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="left|center"
            android:text="@string/sum_text"
            android:textSize="@dimen/big_text_size" />


        <EditText
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:inputType="number"
            android:hint="@string/sum_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/category_text"
            android:textSize="@dimen/big_text_size" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:hint="@string/category_hint"
            android:textColorHint="@color/green"
            android:textSize="@dimen/medium_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_date"
            android:textSize="@dimen/big_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:textColorHint="@color/green"
            android:textSize="@dimen/medium_text_size" />

    </GridLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/fab_content"
        fab:fab_colorNormal="@color/primary"
        fab:fab_colorPressed="@color/primary_pressed"
        fab:fab_colorRipple="@color/ripple" />

</LinearLayout>
