<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    style="@style/Container">

    <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="@dimen/cardview_height"
    android:layout_margin="@dimen/cardview_margin"
    card_view:cardBackgroundColor="@color/background"
    card_view:cardCornerRadius="@dimen/cardview_corner_radius"
    card_view:cardElevation = "@dimen/cardview_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/date_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="@string/date"
                    android:textSize="@dimen/date_text_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/sum_id"
                style="@style/summText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/summ_margin_right"
                android:layout_marginTop="@dimen/summ_margin_top"
                android:text="@string/sum"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>